--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
 }
 
-/* NAVIGATION BAR */
+/******* NAVIGATION BAR *******/
 .tabs {
   display: block;
   top: 0;
@@ -46,7 +46,8 @@ div.tabs .buttons button.active {
 
 .tabcontent h3 {
   font-family: Abel;
-  font-size: 20pt;
+  font-size: 30pt;
+  margin-bottom: 0;
 }
 
 #home {
@@ -61,6 +62,7 @@ div.tabs .buttons button.active {
   font-size: 25pt;
 }
 
+/*********** HOME TAB  *************/
 /* PROGRESS BAR */
 #progress-bar {
   height: 10px;
@@ -112,3 +114,31 @@ form {
 .popup .show {
   visibility: visible;
 }
+/*********************************/
+
+/********** PROFILE TAB *************/
+/* Columns */
+.column {
+  width: 33%;
+  float:left;
+  font-family: Open Sans;
+  font-size: 15pt;
+  color: #898989;
+}
+
+.column h2 {
+  text-align: center;
+  font-family: Abel;
+  font-size: 17pt;
+  color: #5e5e5e;
+}
+/*********************************/
+
+
+/********** HIGH SCORE TAB *************/
+#high-score ol {
+  text-align: left;
+  font-family: Open Sans;
+  font-size: 20pt;
+}
+/*********************************/
