--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ body {
   padding: 0;
 }
 
+/* START GAME BUTTON */
+#start {
+  visibility: visible;
+  margin-top: 2%;
+  font-size: 15pt;
+}
+
+
 /******* NAVIGATION BAR *******/
 .tabs {
   display: block;
@@ -92,6 +100,38 @@ form {
   text-align: left;
   width: 50%;
   outline: none;
+}
+
+/* START GAME COUNTDOWN */
+/* container */
+.modal {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Countdown box */
+.modal-content {
+  background-color: white;
+  font-family: Abel;
+  font-size: 20pt;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  border: 2px solid grey;
+}
+
+.modal-content p {
+  margin: 0;
+}
+
+#countdown-clock {
+  font-size: 25pt;
 }
 
 /* End of game stats container */
